--- a/src/App.css
+++ b/src/App.css
@@ -4,31 +4,26 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 50vmin;
+  text-align: center;
   pointer-events: none;
 }
 
 .App-header {
-  background-color: #b9bdc5e8;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
   color: #61dafb;
 }
 
-.App-form{
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font: size 18px;
-  color:#1E90FF;
-
-}
 .App-Title{
   font-family:sans-serif;
   font: size 15px;
@@ -37,5 +32,178 @@
   padding-top: 25px;
   margin-left: 7%;
 }
+.App-form{
+  font-family:sans-serif;
+  color:#1E90FF;
+  text-align: center;
+  width: 300px;
+    margin: 60px auto 30px;
+    padding: 10px;
+    position: absolute;
+}
+
+.form-1 {
+      /* Size & position */
+      width: 300px;
+      margin: 60px auto 30px;
+      padding: 10px;
+      position: relative; /* For the submit button positioning */
+  
+      /* Styles */
+      box-shadow: 
+          0 0 1px rgba(0, 0, 0, 0.3), 
+          0 3px 7px rgba(0, 0, 0, 0.3), 
+          inset 0 1px rgba(255,255,255,1),
+          inset 0 -3px 2px rgba(0,0,0,0.25);
+      border-radius: 5px;
+      background: linear-gradient(#eeefef, #ffffff 70%);
 
 
+}
+.form-1 input[type=text],
+.form-1 input[type=password] {
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  text-shadow: 0 1px 0 rgba(255,255,255,0.8);
+  padding: 5px 9px 5px 22px;
+  text-align: center;
+  margin-left: 20px;
+  
+}
+.form-1 input[type=username] {
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  text-shadow: 0 1px 0 rgba(255,255,255,0.8);
+}
+
+.form-1 button {
+  /* Size and position */
+  width: 85%;
+  height: 100%;
+  margin-top: -1px;
+  margin-left: 25px;
+
+  /* Icon styles */
+  font-size: 1.4em;
+  font-family:sans-serif;
+  line-height: 1.75;
+  color:#1E90FF;
+  font-weight: bold;
+
+  /* Styles */
+  border: none; /* Remove the default border */
+  background: whitesmoke;
+  box-shadow: 
+      inset 0 1px 0 rgba(255,255,255,0.3),
+      0 1px 2px rgba(0,0,0,0.35),
+      inset 0 3px 2px rgba(255,255,255,0.2),
+      inset 0 -3px 2px rgba(0,0,0,0.1);
+
+  cursor: pointer;
+
+}
+  .form-2 {
+    /* Size & position */
+    width: 90%;
+    height: 30%;
+    margin: 60px auto 30px;
+    padding: 10px;
+    position:absolute;
+    top:35%;
+    left:5.3%;
+
+    /* Styles */
+    box-shadow: 
+        0 0 1px rgba(0, 0, 0, 0.3), 
+        0 3px 7px rgba(0, 0, 0, 0.3), 
+        inset 0 1px rgba(255,255,255,1),
+        inset 0 -3px 2px rgba(0,0,0,0.25);
+    border-radius: 5px;
+    background: linear-gradient(#eeefef, #ffffff 70%);
+
+
+}
+
+.form-2 input[type=text],
+.form-2 input[type=prenom] {
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: 200;
+  text-shadow: 0 1px 0 rgba(255,255,255,0.8);
+  padding: 2px 5px 2px 10px;
+  text-align: left;
+  margin-left: 7px;
+  margin-top: 10px;
+  width:30%;
+  
+}
+.Label{
+  color: black;
+  font-size:30px;
+  text-align: center;
+  margin-top:17%;
+  font-family: sans-serif;
+  color:#1E90FF;
+  font-weight: bold;
+}
+
+.form-2 label {
+  font-size: 20px;
+  color: dimgrey;
+  font-family: sans-serif;
+  margin-left: 5%;
+}
+
+
+.form-2 button {
+  /* Size and position */
+  width: 20%;
+  height: 100%;
+  margin-top: 15px;
+  margin-left: 500px;
+  position: relative;
+  text-align: center;
+
+  /* Icon styles */
+  font-size: 1.4em;
+  font-family:sans-serif;
+  line-height: 1.75;
+  color:#1E90FF;
+  font-weight: bold;
+
+  /* Styles */
+  border: none; /* Remove the default border */
+  background: whitesmoke;
+  box-shadow: 
+      inset 0 1px 0 rgba(255,255,255,0.3),
+      0 1px 2px rgba(0,0,0,0.35),
+      inset 0 3px 2px rgba(255,255,255,0.2),
+      inset 0 -3px 2px rgba(0,0,0,0.1);
+
+  cursor: pointer;
+
+}
+
+.button-home {
+  /* Size and position */
+  width: 20%;
+  height: 5%;
+  top: 82%;
+  margin-top: 15px;
+  margin-left: 12px;
+  position: absolute;
+  text-align: center;
+
+  /* Icon styles */
+  font-size: 1.4em;
+  font-family:sans-serif;
+  line-height: 1.75;
+  color:#1E90FF;
+  font-weight: bold;
+
+  
+  cursor: pointer;
+
+}
